# doyle

./: Cargo.toml  README.md
assets/: data.json
examples/: main_example.rs
src/: doyle.rs  lib.rs  main.rs  sherlock.rs  watson.rs
src/examples/: main_example.rs
tests/: integration_test.rs
