cargo-features = ["strip"]

[package]
name = "watson"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking"] }
colored = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5.1"

[profile.release]
opt-level = "s"
debug = 0
overflow-checks = false
strip = "symbols"
lto = "fat"
panic = "abort"