cargo-features = ["strip"]

[package]
name = "doyle"
version = "0.0.1"

edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking"] }
colored = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5.1"

[profile.release]
opt-level = "s"
debug = 0
overflow-checks = false
strip = "symbols"
lto = "fat"
panic = "abort"