cargo-features = ["strip"]

[package]
name = "doyle"
description = "Tool for searching social-media accounts"
documentation = "https://docs.rs/doyle"
readme = "README.md"
repository = "https://github.com/i3ima/doyle"
license = "MIT"
exclude = ["/.idea/*", "/.vscode/*"]
version = "0.0.1"
authors = ["i3ima <hueputalo.rubin@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking"] }
colored = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5.1"

[profile.release]
opt-level = "s"
debug = 0
overflow-checks = false
strip = "symbols"
lto = "fat"
panic = "abort"